@@ -21,6 +21,13 @@
       </Options>
     </Configuration>
 
+    <Files>
+      <File>.\Todo.txt</File>
+      <File>.\Release.txt</File>
+      <File>.\Changelog.txt</File>
+      <File>.\License.txt</File>
+    </Files>
+    
     <Project name="OpenTK.Platform.Windows" path=".\Source\Platform\Windows" language="C#" type="Library">
 
       <Configuration name="Debug">
