@@ -1,4 +1,5 @@
 OpenTK 0.3.5 -> 0.3.6
++ Updated the build system to include txt files in the project generation.
 + OpenTK.OpenGL (High level)
 	+ Added the DisplayList class.
 + OpenTK.Examples.OpenGL
